# simple_engine

./: CMakeLists.txt  README.md  Render Loop Design.docx  vcpkg.json  vcpkg_notes.txt  vcpkg_old.json  ~$nder Loop Design.docx
assets/gltf/: cube.blend  cube.blend1  cube.gltf  cube_2.gltf  model2.gltf  sph-test.gltf
assets/shaders/: b-varying.def.sc  b-vertex.sc  compile_shaders_win.bat  fragment.sc  shader_lib.sh  vertex.sc
src/: main.cpp
src/core/: gui.cpp  gui.h  locator.cpp  locator.h  material.h  mesh.cpp  mesh.h  model_loader.cpp  model_loader.h  node.cpp  node.h  render_object.cpp  render_object.h  renderer.cpp  renderer.h  renderer_sdl2.cpp  renderer_sdl2.h  texture.h
src/core/utils/: debug.h  fileops.cpp  fileops.h
src/importers/: gltf_loader.cpp  gltf_loader.h
src/utils/: debug.h  fileops.cpp  fileops.h
